# jd

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: link_generator.rs  main.rs  utils.rs
