[package]
name = "ezp"
version = "0.2.1"
authors = ["Heru Handika <herubiolog@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A command line app to generate a library access EZProxy"
readme = "README.md"
homepage = "https://github.com/hhandika/jd"
repository = "https://github.com/hhandika/jd"
keywords = ["cli", "ezproxy", "library", "utility"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.7", features = ["cargo"] }
open = "2.0.2"
